test-suite/output/ErrorLocation_ltac_4.out
File "stdin", line 2, characters 22-23:
Error: Tactic failure.

